# sector

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci-cd.yml
assets/scenes/: default.scn.ron
crates/sector_core/: Cargo.toml
crates/sector_core/src/: lib.rs
crates/sector_edit/: Cargo.toml
crates/sector_edit/src/: main.rs
src/: draw.rs  lib.rs  main.rs  pixel.rs  utils.rs
wasm/: edit.html  index.html
