[package]
name = "sector"
description = "Sector/portal rendering engine with Bevy"
version = "0.1.0"
authors = ["David Cristofaro <david@dtcristo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtcristo/sector"

[dependencies]
bevy = { version = "0.9", default_features = false, features = ["bevy_asset", "bevy_scene"] }
bevy_pixels = { path = "../bevy_pixels", version = "0.7" }
bevy_render = "0.9"
lazy_static = "1.4"
rust_bresenham = "0.1"
image = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
