[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
bevy = { version = "0.9", default_features = false }
bevy_egui = "0.18"
bevy_pixels = "0.8"
console_error_panic_hook = "0.1"
image = "0.24"
lazy_static = "1"
palette = "0.6"
rmp-serde = "1"
rust_bresenham = "0.1"
sector_core = { path = "packages/sector_core" }
